[gd_scene load_steps=5 format=3 uid="uid://bh7styk52g03y"]

[ext_resource type="Script" path="res://scripts/main_start_menue.gd" id="1_mtdlc"]
[ext_resource type="Texture2D" uid="uid://7uv2oxdhotra" path="res://images/Photokako-pointillism-368pZ14vGY82d3XW.jpg" id="1_r7sle"]
[ext_resource type="Texture2D" uid="uid://btq6808xln50b" path="res://images/Photokako-polaroid-JqjzXccHkOLYumQq_optimized.png" id="2_68rwu"]
[ext_resource type="Texture2D" uid="uid://c5afo76go41rp" path="res://icon.svg" id="4_rgr1q"]

[node name="main start menue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtdlc")

[node name="background" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bg" type="Sprite2D" parent="background"]
position = Vector2(108, 870)
scale = Vector2(1.38247, 1.38247)
texture = ExtResource("1_r7sle")

[node name="debug center point i nbg" type="Sprite2D" parent="background/bg"]
visible = false
scale = Vector2(0.390205, 0.390205)
texture = ExtResource("4_rgr1q")

[node name="ColorRect" type="ColorRect" parent="background"]
layout_mode = 0
offset_left = -9.0
offset_top = -10.0
offset_right = 819.0
offset_bottom = 618.0
color = Color(0, 0, 0, 0.529412)

[node name="items" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="items"]
layout_mode = 0
offset_right = 804.0
offset_bottom = 600.0
theme_override_constants/margin_left = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="items/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="items/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_68rwu")
stretch_mode = 5

[node name="load menue" type="Button" parent="items/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LOAD FROM SAVE"

[node name="setting" type="Button" parent="items/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="credits" type="Button" parent="items/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="Label" type="Label" parent="items"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "*Some images are placeholders
more updates soon"

[node name="Label2" type="Label" parent="items"]
layout_mode = 0
offset_top = 67.0
offset_right = 243.0
offset_bottom = 116.0
text = "*This game was made
WITHOUT the use of GEN AI"

[node name="Label3" type="Label" parent="items"]
layout_mode = 0
offset_top = 132.0
offset_right = 243.0
offset_bottom = 181.0
text = "*Made by sliverofstraw0"

[node name="Label4" type="Label" parent="items"]
layout_mode = 0
offset_top = 179.0
offset_right = 243.0
offset_bottom = 228.0
text = "*Join the blahaj games ARG
discord; blahajgames.com"

[node name="version" type="Label" parent="items"]
layout_mode = 0
offset_left = 691.0
offset_right = 800.0
offset_bottom = 89.0
text = "ALPHA 0.0.0.0"
autowrap_mode = 1

[node name="load from save" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 803.0
offset_bottom = 602.0

[node name="MarginContainer" type="MarginContainer" parent="load from save"]
layout_mode = 0
offset_right = 804.0
offset_bottom = 603.0
mouse_filter = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="load from save/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quick Options"
horizontal_alignment = 1

[node name="new game" type="Button" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="auto save" type="Button" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "auto save"

[node name="Label2" type="Label" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Custom Saves"
horizontal_alignment = 1

[node name="save name" type="TextEdit" parent="load from save/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "ENTER SAVE NAME HERE"

[node name="auto save2" type="Button" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "click here to load custom save (enter save name first)"

[node name="go back to menue" type="Label" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back To Main Menue"
horizontal_alignment = 1

[node name="back to main menue" type="Button" parent="load from save/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back"

[node name="loading screen" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -21.0
offset_top = -17.0
offset_right = 836.0
offset_bottom = 637.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="loading screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.024
anchor_right = 0.956
anchor_bottom = 0.941
offset_left = -0.425001
offset_top = 1.304
offset_right = 1.70795
offset_bottom = 1.586
mouse_filter = 2

[node name="Label" type="Label" parent="loading screen/CenterContainer"]
layout_mode = 2
text = "LOADING"

[node name="show laoding screen" type="Timer" parent="loading screen"]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="items/MarginContainer/VBoxContainer/load menue" to="." method="_on_load_menue_pressed"]
[connection signal="pressed" from="items/MarginContainer/VBoxContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="load from save/MarginContainer/VBoxContainer/new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="load from save/MarginContainer/VBoxContainer/auto save" to="." method="_on_auto_save_pressed"]
[connection signal="pressed" from="load from save/MarginContainer/VBoxContainer/auto save2" to="." method="_on_auto_save_2_pressed"]
[connection signal="pressed" from="load from save/MarginContainer/VBoxContainer/back to main menue" to="." method="_on_back_to_main_menue_pressed"]
[connection signal="timeout" from="loading screen/show laoding screen" to="." method="_on_show_laoding_screen_timeout"]
